--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 <body>
   <script src="/js/scripts.js"></script>
+  
    <div class="form">
-     <form>
+      <form>
+       <h1>Akan Name</h1>
+       <p>Please fill in the details of your date of birth. We promise not to tell anyone!</p>
         <div class="field-day">
           <input type="text" placeholder="Day" required>
         </div>
@@ -21,8 +24,8 @@
         <div class="field-year">
           <input type="text" placeholder="Year" required>
         </div>
-
-     </form>
+        
+      </form>
    </div>
 </body>
 </html>
