--- a/index.html
+++ b/index.html
@@ -11,21 +11,14 @@
 <body>
   <script src="/js/scripts.js"></script>
   
-   <div class="form">
+   <div class="container">
       <form>
        <h1>Akan Name</h1>
-       <p>Please fill in the details of your date of birth. We promise not to tell anyone!</p>
-        <div class="field-day">
-          <input type="text" placeholder="Day" required>
-        </div>
-        <div class="field-month">
-          <input type="text" placeholder="Month" required>
-        </div>
-        <div class="field-year">
-          <input type="text" placeholder="Year" required>
-        </div>
-        
-      </form>
-   </div>
+        <p>Please fill in the details of your date of birth. We promise not to tell anyone!</p>
+         <input type="text" placeholder="Day" required>       
+         <input type="text" placeholder="Month" required>      
+         <input type="text" placeholder="Year" required>
+       </form>
+    </div>
 </body>
 </html>
