Adding a button to submit

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 </head>
 <body>
   <script src="/js/scripts.js"></script>
-  
-   <div class="container">
+    <div class="container">
+      <h1>Akan Name</h1>
+      <p>Please fill in the details of your date of birth. We promise not to tell anyone!</p>
+    </div>
+    <div class="form">
       <form>
-       <h1>Akan Name</h1>
-        <p>Please fill in the details of your date of birth. We promise not to tell anyone!</p>
-         <input type="text" placeholder="Day" required>       
+         <input type="text" placeholder="Day" required >       
          <input type="text" placeholder="Month" required>      
          <input type="text" placeholder="Year" required>
-       </form>
+         <button>Submit</button>
+      </form>
     </div>
 </body>
 </html>
