Add colour to the button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <input type="text" placeholder="Day" required >       
          <input type="text" placeholder="Month" required>      
          <input type="text" placeholder="Year" required>
-         <button>Submit</button>
+         <button class="btn btn-oblong btn-pink">Submit</button>
       </form>
     </div>
 </body>
