Added an inroduction to the form

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <title>AkanNAmes</title>
 </head>
 <body>
-  <script src="/js/scripts.js"></script>
-    <div class="container">
-      <h1>Akan Name</h1>
+  <div class="container">
+  </div>
+  <div class="form">
+    <form>
       <p>Please fill in the details of your date of birth. We promise not to tell anyone!</p>
-    </div>
-    <div class="form">
-      <form>
-         <input type="text" placeholder="Day" required >       
-         <input type="text" placeholder="Month" required>      
-         <input type="text" placeholder="Year" required>
-         <button class="btn btn-oblong btn-pink">Submit</button>
-      </form>
-    </div>
+      <input type="text" placeholder="Day" required >       
+      <input type="text" placeholder="Month" required>      
+      <input type="text" placeholder="Year" required>
+      <button>Submit</button>
+    </form>
+  </div>
+  
+  <script src="/js/scripts.js"></script>
 </body>
 </html>
