Added the male and felae checkers

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <input type="text" placeholder="Day" required >       
       <input type="text" placeholder="Month" required>      
       <input type="text" placeholder="Year" required>
+      <input type="radio" name="Gender" value="Male"> Male <br>
+      <input type="radio" name="Gender" value="Female"> Female <br>
       <button>Submit</button>
     </form>
   </div>
