Declared the variables day, month and year

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <div class="form">
     <form>
       <p>Please fill in the details of your date of birth. We promise not to tell anyone!</p>
-      <input type="text" placeholder="Day" required >       
-      <input type="text" placeholder="Month" required>      
-      <input type="text" placeholder="Year" required>
-      <input type="radio" name="Gender" value="Male"> Male <br>
-      <input type="radio" name="Gender" value="Female"> Female <br>
+      <input type="text" placeholder="Day" id="day" required >       
+      <input type="text" placeholder="Month" id="day"  required>      
+      <input type="text" placeholder="Year"  id="day" required>
+      <input type="radio" name="Gender"  value="Male"  id="day"  required> Male <br>
+      <input type="radio" name="Gender" value="Female" id="day" required> Female <br>
       <button>Submit</button>
     </form>
   </div>
