Added functions for calculating dayIndex and returning the Akan Name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>AkanNAmes</title>
+  <title>Akan NAmes</title>
 </head>
 <body>
   <div class="container">
@@ -15,10 +15,10 @@
     <form>
       <p>Please fill in the details of your date of birth. We promise not to tell anyone!</p>
       <input type="text" placeholder="Day" id="day" required >       
-      <input type="text" placeholder="Month" id="day"  required>      
-      <input type="text" placeholder="Year"  id="day" required>
-      <input type="radio" name="Gender"  value="Male"  id="day"  required> Male <br>
-      <input type="radio" name="Gender" value="Female" id="day" required> Female <br>
+      <input type="text" placeholder="Month" id="month"  required>      
+      <input type="text" placeholder="Year"  id="year" required>
+      <input type="radio" name="Gender"  value="Male"  id="gender"  required> Male <br>
+      <input type="radio" name="Gender" value="Female" id="gender" required> Female <br>
       <button>Submit</button>
     </form>
   </div>
