Added a landing page withe the description of the Akan people

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button onclick="displayAkanName()">Submit</button>
     </form>
   </div>
-  
   <script src="js/scripts.js"></script>
-</body>
+  <li><a href="home.html">Home</a></li>
+\</body>
 </html>
