Added a background image to the landing page

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
       <input type="radio" name="Gender" value="Male" required> Male <br>
       <input type="radio" name="Gender" value="Female" required> Female <br>
       <button onclick="displayAkanName()">Submit</button>
+      <div>
+        <li><a href="home.html">Home</a></li>
+      </div>
     </form>
   </div>
   <script src="js/scripts.js"></script>
-  <li><a href="home.html">Home</a></li>
-\</body>
+</body>
 </html>
