--- a/home.html
+++ b/home.html
@@ -8,16 +8,19 @@
   <title>Home</title>
 </head>
 <body>
-  <h1>The Akan People</h1>
-  <p>
-    The Akan (/əˈkæn/) are a meta-ethnicity predominantly speaking Central Tano languages and residing in the southern regions of the former Gold Coast region where Ghana is today located. The Akans, who historically migrated from Ghana, also make up a majority of the population in the Ivory Coast.
-  </p>
-  <p>
-    Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. Here are Ghanian day names. 
-    Want to know what your Akan name would be?
-  </p>
-  <ul>
-    <li><a href="index.html">Click here</a></li>
-  </ul>
+  <div class="text">
+    <h1>The Akan People</h1>
+    <p>
+      The Akan (/əˈkæn/) are a meta-ethnicity predominantly speaking Central Tano languages and residing in the southern regions of the former Gold Coast region where Ghana is today located. The Akans, who historically migrated from Ghana, also make up a majority of the population in the Ivory Coast.
+    </p>
+    <p>
+      Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. Here are Ghanian day names. 
+    </p>
+    <p>
+        Want to know what your Akan name would be?
+
+    </p>
+    <li><a href="index.html">Click here!</a></li>
+  </div>
 </body>
 </html>
