Added a hover effect to the submit button

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
       <input type="number" placeholder="Day" id="day" min="1" max="31" required >       
       <input type="number" placeholder="Month" id="month" min="1" max="12" required>      
       <input type="number" placeholder="Year" id="year" min="1900" required>
-      <input type="radio" name="Gender" value="Male" required> Male <br>
-      <input type="radio" name="Gender" value="Female" required> Female <br>
+      <div class="gender">
+        <input type="radio" name="Gender" value="Male" required> Male <br>
+        <input type="radio" name="Gender" value="Female" required> Female <br>
+      </div>
       <button onclick="displayAkanName()">Submit</button>
       <div>
         <li><a href="home.html">Home</a></li>
