--- a/home.html
+++ b/home.html
@@ -17,10 +17,19 @@
       Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. Here are Ghanian day names. 
     </p>
     <p>
-        Want to know what your Akan name would be?
-
+      Want to know what your Akan name would be?
     </p>
     <li><a href="index.html">Click here!</a></li>
+    <div class="quote">
+      <p>
+          "I am not African because I was born in Africa but because Africa was born in me"
+        </p>
+        <p>
+          -Kwame Nkurumah
+        </p>
+    </div>
   </div>
+ 
+
 </body>
 </html>
