--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
       The Akan (/əˈkæn/) are a meta-ethnicity predominantly speaking Central Tano languages and residing in the southern regions of the former Gold Coast region where Ghana is today located. The Akans, who historically migrated from Ghana, also make up a majority of the population in the Ivory Coast.
     </p>
     <p>
-      Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. Here are Ghanian day names. 
+      The Akan people of Ghana frequently name their children after the day of the week they were born and the order in which they were born. These "day names" have further meanings concerning the soul and character of the person. Middle names have considerably more variety and can refer to their birth order, twin status, or an ancestor's middle name.
     </p>
     <p>
       Want to know what your Akan name would be?
